tdf#136928 Use dialog text color for signs in "Tabs" dialog

and use an explicit matching background of dialog color

Since the font color is black even in dark themes
like "Adwaita-Dark", using a dark style/theme would previously
result in black signs on a dark background for the Qt-based VCL
plugins (qt5/kf5/qt6).

Change-Id: I470011c26861221310e898c8f63fceef5e1aca3c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140029
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 2deabc28166af2fc84e74f705b503a42e5394d54)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139982
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>